--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
-        <title>Top 100 Live: Team</title>
+        <title>Top 100 Live!</title>
     </head>
 
     <body>
@@ -47,7 +47,7 @@
         </div>
 
         <br>
-        <h3 style="margin-bottom: 100px; text-align: center;">Top 100 Live! <small>v2</small></h3>
+        <h2 style="margin-bottom: 100px; text-align: center;">Top 100 Live! <small>v2</small></h2>
         <nav class="menu navbar navbar-expand-md navbar-dark">
          
           <div class="navbar-collapse collapse justify-content-center">
