corrected team memeber JP information

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             <div class="container">
               <div class="banner">
                 <h5 class="display-4">👋From The CryptoHomies' with love!<h5></h5>
-                   <p>Gains & Edutainment</p>
-                <br>
-                
-                
+                   <img src="assets/HomieHead3.png" class="img-fluid " alt="CryptoHomieHector">
+                   <p style="color: black;">Gains & Edutainment</p>
+
+                   <a class="btn btn-primary btn-homepage" href="team.html">Team</a>
+                <br>      
               </div>
             </div>
         </div>
