--- a/team.html
+++ b/team.html
@@ -36,6 +36,8 @@
               <div class="banner">
                 <h5 class="display-4">👋From The CryptoHomies' with love!<h5></h5>
                    <p>Gains & Edutainment</p>
+                   <img src="assets/HomieHead3.png" class="img-fluid " alt="CryptoHomieHector">
+                   <p style="color: black;">Gains & Edutainment</p>
                 <br>
                 
                 
@@ -93,9 +95,9 @@
                <small>
                 <p class="card-text">
                   From Asbury Park, New Jersey, Jonti is a Graphic designer. Introduction into crypto, 2020 DeFi Summer.
-                  Favorite shows are The Wire, Good Morning Crypto, Bitboy Crypto. Joined Ivan On Tech Academy in 2020 
-                  and went full-time crypto in 2021. "I'm excited to be in this space. I'm on a mission to bring Jreamer Tec
-                  to a million wallets!"   
+                  Favorite shows are Dragonball Z, Good Morning Crypto, Bitboy Crypto. Joined Ivan On Tech Academy in 2020 
+                  and went full-time crypto in 2021. "I'm excited to be in this space. I'm on a mission to change the 
+                  world with this technology!"   
   
                 </p>
                </small>
