--- a/learn.html
+++ b/learn.html
@@ -35,7 +35,8 @@
             <div class="container">
               <div class="banner">
                 <h5 class="display-4">👋From The CryptoHomies' with love!<h5></h5>
-                   <p>Gains & Edutainment</p>
+                <img src="assets/HomieHead3.png" class="img-fluid " alt="CryptoHomieHector">
+                <p style="color: black;">Gains & Edutainment</p>
                 <br>
                 
                 <a class="btn btn-primary btn-homepage" href="team.html">Team</a>
